corrected docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,10 @@ services:
       EULA: True
       INIT_MEMORY: 16G
       MAX_MEMORY: 24G
-      TYPE: AUTO_CURSEFORGE
-      CF_PAGE_URL: https://www.curseforge.com/minecraft/modpacks/ciscos-adventure-rpg-ultimate/download/6371759
-      # VERSION: "1.19.2"
-      # FORGE_VERSION: "47.4.0"
-      # CF_SERVER_MOD: "Cisco's Fantasy Medieval RPG [Ultimate]-V7b.zip"
+      VERSION: "1.19.2"
+      FORGE_VERSION: "43.3.5"
+      TYPE: CURSEFORGE
+      CF_SERVER_MOD: "CARPG Ultimate V7b Serv.zip"
 
     # RAM-DISK
     # volumes:
